trying overflow scroll to solve table problem on mobile.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -111,6 +111,9 @@ background-size: cover;
 .visible-xs td{
      background-color: $lightBlue!important;
 }
+.table{
+    overflow: scroll;
+}
 // Locations---------------------------------
 //ul........................................
 .locations.row{
